Updated of gateway and JWT implementations

--- a/gateway/gateway/src/main/resources/application.properties
+++ b/gateway/gateway/src/main/resources/application.properties
@@ -12,8 +12,15 @@ management.security.enabled=false
 spring.cloud.gateway.routes[0].id=shoppingCartRoute
 spring.cloud.gateway.routes[0].uri=http://localhost:8081/shoppingcart/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/shoppingcart/**
-spring.cloud.gateway.routes[0].filters[0]=AddResponseHeader=X-Response-Header, SCS
+spring.cloud.gateway.routes[0].filters[0]=AuthenticationFilter
 
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+#Routes
+spring.cloud.gateway.routes[1].id=auth
+spring.cloud.gateway.routes[1].uri=http://localhost:8084/auth/
+spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[1].filters[0]=AuthenticationFilter
 
+#spring.cloud.gateway.routes[1].filters[0]=AddResponseHeader=X-Response-Header, SCS
+
+
+spring.security.enabled=false
